Update backend and frontend logic for UrlShortener with new migrations

--- a/UrlShortener/appsettings.json
+++ b/UrlShortener/appsettings.json
@@ -1,4 +1,8 @@
 {
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DUH\\thale;Database=UrlShortenerDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
