Add URL expiration date feature and UI improvements

--- a/UrlShortener/appsettings.json
+++ b/UrlShortener/appsettings.json
@@ -1,7 +1,6 @@
 {
-
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DUH\\thale;Database=UrlShortenerDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=UrlShortenerDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
